language/move-lang/tests/move_check/parser/let_binding_trailing_comma.move
module M {
    f() {
        let (x1, x2,) = (1, 2); // Test a trailing comma in the let binding
    }
}
